# simnibs

./: .coveragerc  .gitattributes  .gitignore  .gitignore.release  3RD-PARTY.md  CONTRIBUTING.md  MANIFEST.in  README.md  env.yml  environment_linux.yml  environment_linux_bak.yml  environment_macOS.yml  environment_osx.yml  environment_unix.yml  environment_win.yml  install_miniconda_instance.sh  install_simnibs.sh  pack.py  pack_unpack.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.azure-pipelines/: azure-pipelines-docs.yml  azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-windows.yml  examples.yml  pack.yml  quick_tests.yml
.githooks/: post-checkout  pre-commit  pre-push  rm_internal_dirs.sh
.github/workflows/: build_documentation.yml  test_examples.yml
docs/: 3rd_party.rst  Makefile  changelog.rst  conf.py  contact.rst  contributors.rst  dataset.rst  external_packages.rst  faq.rst  gallery.rst  index.html  index.rst  make.bat  publications.rst
docs/data/: tutorial_matlab.m  tutorial_python.py
docs/doctrees/: contributors.doctree  environment.pickle  index.doctree  installation.doctree  publications.doctree
docs/documentation/: coils.rst  coordinates.rst  documentation.rst  file_formats.rst  gui.rst  output_files.rst
docs/html/: .buildinfo  changelog.html  contributors.html  genindex.html  index.html  installation.html  objects.inv  publications.html  search.html  searchindex.js
docs/installation/: conda.rst  installation.rst  optional.rst  requirements.rst  setup_spyder.rst  simnibs_installer.rst  throubleshooting.rst  uninstall.rst
docs/source/: Makefile  changelog.rst  conf.py  make.bat  make_documentation.sh
docs/tutorial/: analysis.rst  gui.rst  head_meshing.rst  optimization.rst  overview_tes_opt.rst  overview_tms_opt.rst  scripting.rst  tdcs_distributed_opt.rst  tes_flex_opt.rst  tms_flex_opt.rst  tms_optimization.rst  tutorial.rst  visualization.rst  win_prompt.rst
examples/: example_TMS_ernie_minimal.m  example_TMS_ernie_minimal.py  example_get_data_from_fs_files.m  example_get_data_from_msh.m  example_setup_tDCS_ernie.m  example_tDCS_ernie_minimal.py  example_tDCS_ernie_ring.py  group_average.py  run_simulations_group.m  uq_setup_advanced.py
packing/: _install.bat  fix_LC_VERSION_MIN_MACOSX  fix_entrypoints.py  install  installer.nsi  pack.py
packing/macOS_installer/: Distribution  conclusion.html  postinstall  welcome.html
packing/macOS_scripts/: postinstall
simnibs/: .coveragerc  README.rst  TODO.md  __init__.py  _version.py  charm.ini  charm_tms.ini  conftest.py  optimization.py
simnibs/GUI/: electrodeGUI.py  head_model_OGL.py  main_gui.py  nifti_viewer.py  simulation_menu.py
simnibs/_compiled/: _cgal_intersect.cpp  _cgal_misc.pyx  _create_mesh_surf.pyx  _create_mesh_vol.pyx  _mesh.cpp  create_mesh.pyx  petsc_solver.pyx
simnibs/_internal_resources/: gmsh-options_simnibsdefault  sitecustomize.py
simnibs/bash_modules/: b02b0_nosubsamp.cnf  dwi2cond  dwi2cond.check.source.sh  dwi2cond.functions.source.sh  dwi2cond.t1reg.source.sh  mri2mesh  mri2mesh.brain.source.sh  mri2mesh.check.source.sh  mri2mesh.head.source.sh  mri2mesh.mni.source.sh
simnibs/cli/: add_tissues_to_upsampled.py  calc_B.py  ccd2nifti.py  charm.py  charm_tms.py  check_meshed_volumes.py  coil2nifti.py  convert_3_to_4.py  download_coils.py  dwi2cond.py  eeg_positions.py  expand_to_center_surround.py  get_eeg_positions.py  get_fields_at_coordinates.py  gmsh.py  headreco.py  link_external_progs.py  maskmesh.py  merge_labels_WM.py  meshfix.py  meshmesh.py  mni2subject.py  mni2subject_coords.py  mri2mesh.py  msh2cortex.py  msh2nii.py  nii2msh.py  postinstall_simnibs.py  postinstall_simnibs.py.orig  prepare_eeg_forward.py  prepare_eeg_montage.py  prepare_tdcs_leadfield.py  register.py  run_simnibs.py  simnibs_gui.py  simnibs_postinstall.py  subject2mni.py  subject2mni_coords.py  subject_atlas.py  update_simnibs.py
simnibs/cython_code/: _marching_cubes_lewiner_cy.pyx  _solver.c  cython_msh.pyx  petsc_solver.pyx
simnibs/eeg/: forward.py  utils.py  utils_fieldtrip.py  utils_mne.py  viz.py
simnibs/examples/: TMS.m  TMS.py  TMS_MNI.py  example_get_data_from_fs_files.m  example_gpc.py  example_tDCS_ernie_minimal.m  group_average.m  group_average.py  group_average_fsavg.m  group_average_fsavg.py  leadfield.m  leadfield.py  optim.csv  optimization.py  optimize.py  roi_analysis_atlas.m  roi_analysis_atlas.py  roi_analysis_mni.m  roi_analysis_mni.py  run_simulations_group.m  run_simulations_group.py  simple_roi_analysis.m  simple_roi_analysis.py  tDCS.m  tDCS_advanced.m  tDCS_ring.m  tdcs_optimize.py  tdcs_optimize_avoid.py  tdcs_optimize_multi_target.m  tms_opt_refined.py  tms_optimization.py  uncertainty_quantification.m  uq_secondary_quantities.py  write_instrument_marker.py
simnibs/matlab/: get_data_and_scaleLimits.m  get_fields_at_coordinates.m  mesh_extract_regions.m  mesh_get_field.m  mesh_get_fieldpeaks_and_focality.m  mesh_get_node_areas.m  mesh_get_surf_extrema_and_percentiles.m  mesh_get_tetrahedron_centers.m  mesh_load_fsannot.m  mesh_load_fsresults.m  mesh_load_fssurf.m  mesh_load_hdf5.m  mesh_save_gmsh4.m  mesh_save_hdf5.m  mesh_show_surface.m  mni2subject_coords.m  nifti_save.m  opt_struct.m  parse_input.m  run_simnibs.m  sim_struct.m  simnibs_cli_call.m  subject2mni_coords.m  subject_atlas.m
simnibs/matlab_tools/: array_layout.m  expand_to_center_surround.m  get_data_and_scaleLimits.m  get_field_idx.m  get_fields_at_coordinates.m  get_maxTI.m  mesh_extract_regions.m  mesh_get_fieldpeaks_and_focality.m  mesh_get_histogram.m  mesh_get_simulation_result.m  mesh_get_tetrahedron_sizes.m  mesh_get_triangle_centers.m  mesh_get_triangle_sizes.m  mesh_load_data_matrix_entry.m  mesh_load_fsannot.m  mesh_load_fsresults.m  mesh_load_fssurf.m  mesh_load_gmsh4.m  mesh_save_gmsh4.m  mesh_show_surface.m  mni2subject_coilpos.m  mni2subject_coords.m  nifti_hdr.m  nifti_load.m  opt_struct.m  run_simnibs.m  sim_struct.m  standard_cond.m  subject2mni_coords.m  subject_atlas.m
simnibs/mesh_tools/: __init__.py  cython_msh.pyx  eeg_positions.py  (+6 more)
(+1638 files in other folders)
