[metadata]
name = simnibs
author = SimNIBS developers
maintainer = SimNIBS developers
author_email = support@simnibs.org,
license = GPL3
description = Simulation of Non-Invasive Brain
long_description = file: README.md
long_description_content_type = text/markdown
url = www.simnibs.org
version=open("simnibs/_version.py").readlines()[-1].split()[-1].strip("\"'"),

[options]
zip_safe = False
include_package_data = True
python_requires == 3.9
packages = find:
install_requires =
    numpy>=1.16,
    scipy>=1.2,
    h5py>=2.9,
    nibabel>=2.3,
    packaging,
    requests,
    charm-gems,
    fmm3dpy


[options.extras_require]
test =
     pytest
     mock

GUI =
    pyqt5
    pyopengl

setup =
    numpy>=1.16,
    cython

[options.entry_points]
    console_scripts console_scripts,
    gui_scripts: gui_scripts
