[metadata]
name = simnibs
author = SimNIBS developers
maintainer = SimNIBS developers
author_email = support@simnibs.org
license = GPL3
description = Simulation of Non-Invasive Brain
# long_description = file: README.md
# long_description_content_type = text/markdown
url = www.simnibs.org
# version=open("simnibs/_version.py").readlines()[-1].split()[-1].strip("\"'"),
version = v4.1

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9
packages = find:
install_requires =
    numpy==1.21.5
    scipy==1.9
    h5py==3.6.0
    nibabel>=2.3
    packaging==21.3

[options.extras_require]
test =
     pytest==7.1.1
     mock==4.0.3

GUI =
    pyqt5
    pyopengl==3.1.1a1

setup =
    numpy>=1.16
    cython

# [options.entry_points]
#     console_scripts: simnibs.console_scripts
#     gui_scripts: simnibs.gui_scripts
